--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"filp/whoops": "^2.12",
 		"jenssegers/blade": "^1.4",
 		"monolog/monolog": "^2.2",
-		"vlucas/phpdotenv": "^5.3"
+		"vlucas/phpdotenv": "^5.3",
+    "symfony/console": "^5.2"
 	},
 	"autoload": {
 		"psr-4": {
