--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,7 @@ LANG=en
 VIEW_DIR=
 VIEW_CACHE=
 
-DB_ENGINE=mysql
-DB_HOST=localhost
-DB_NAME=
-DB_USER=
-DB_PASS=
-DB_SQLITE=
+# DB_DSN=mysql:host=localhost;dbname=bmvc;charset=utf8
+DB_DSN=mysql:host=;dbname=;charset=utf8
+DB_MYSQL_USER=
+DB_MYSQL_PASS=
