--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ VIEW_CACHE=
 
 # DB_DSN=mysql:host=localhost;dbname=bmvc;charset=utf8
 DB_DSN=mysql:host=;dbname=;charset=utf8
-DB_MYSQL_USER=
-DB_MYSQL_PASS=
+DB_USER=
+DB_PASS=
