--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"ext-json": "*",
 		"ext-pdo": "*",
 		"ext-mbstring": "*",
+		"ext-intl" : "*",
 		"filp/whoops": "^2.12",
 		"jenssegers/blade": "^1.4",
 		"monolog/monolog": "^2.2",
