--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ LOG=true
 LANG=en
 VIEW_DIR=
 VIEW_CACHE=
+PUBLIC_DIR=
 
 # DB_DSN=mysql:host=localhost;dbname=bmvc;charset=utf8
 DB_DSN=mysql:host=;dbname=;charset=utf8
