--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,12 +21,14 @@ jobs:
       id: composer-cache
       uses: actions/cache@v2
       with:
+        php-version: '7.3'
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
 
     - name: Install dependencies
+    
       run: composer install --prefer-dist --no-progress
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
