--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - uses: nanasess/setup-php@master
+      with:
+        php-version: '7.3'
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -21,7 +25,6 @@ jobs:
       id: composer-cache
       uses: actions/cache@v2
       with:
-        php-version: '7.3'
         path: vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
