--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -10,11 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-     
+
     steps:
-    
-    - name: Composer Action install - 7.3
-      uses: mileschou/composer-action/7.3/install@master
+    - uses: actions/checkout@v2
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -27,13 +25,6 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
-
     - name: Install dependencies
     
       run: composer install --prefer-dist --no-progress
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
