--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ LANG=en
 VIEW_DIR=
 VIEW_CACHE=
 PUBLIC_DIR=
+LANGUAGES_DIR=
 
 # DB_DSN=mysql:host=localhost;dbname=bmvc;charset=utf8
 DB_DSN=mysql:host=;dbname=;charset=utf8
