--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Switch PHP Version
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '7.3'
+#    - name: Switch PHP Version
+#      uses: shivammathur/setup-php@v2
+#      with:
+#        php-version: '7.3'
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
