--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,8 @@
 	},
 	"scripts": {
 		"post-install-cmd": "BMVC\\Libs\\Composer::postInstall",
-		"post-update-cmd": "BMVC\\Libs\\Composer::postUpdate"
+		"post-update-cmd": "BMVC\\Libs\\Composer::postUpdate",
+		"post-package-install": "BMVC\\Libs\\Composer::postPackageInstall",
+		"post-package-update": "BMVC\\Libs\\Composer::postPackageUpdate"
 	}
 }
