--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,6 @@
 	},
 	"scripts": {
 		"post-install-cmd": "BMVC\\Libs\\Composer::postInstall",
-		"post-update-cmd": "BMVC\\Libs\\Composer::postUpdate",
-		"post-package-install": "BMVC\\Libs\\Composer::postPackageInstall",
-		"post-package-update": "BMVC\\Libs\\Composer::postPackageUpdate"
+		"post-update-cmd": "BMVC\\Libs\\Composer::postUpdate"
 	}
 }
