--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
 		"symfony/console": "^5.2"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "7"
+		"phpunit/phpunit": "^9"
 	},
 	"autoload": {
 		"psr-4": {
