--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,8 @@
 		"post-update-cmd": "BMVC\\Libs\\Composer::folderDelete",
 		"post-autoload-dump": "BMVC\\Libs\\Composer::folderDelete",
 		"post-root-package-install": "BMVC\\Libs\\Composer::folderDelete",
-		"post-create-project-cmd": "BMVC\\Libs\\Composer::folderDelete"
+		"post-create-project-cmd": "BMVC\\Libs\\Composer::folderDelete",
+		"post-package-install": "BMVC\\Libs\\Composer::folderDelete",
+		"post-package-update": "BMVC\\Libs\\Composer::folderDelete"
 	}
 }
