--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,14 @@
 	"bin": ["bin/bmvc"],
 	"require": {
 		"php": "^7.3 || ^8.0",
-		"ext-json": "*",
-		"ext-pdo": "*",
 		"ext-mbstring": "*",
 		"ext-intl" : "*",
+		"mirarus/bmvc-libs": "*",
 		"filp/whoops": "^2.12",
 		"jenssegers/blade": "^1.4",
 		"monolog/monolog": "^2.2",
 		"vlucas/phpdotenv": "^5.3",
 		"symfony/console": "^5.2"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "^9"
 	},
 	"autoload": {
 		"psr-4": {
@@ -31,9 +27,6 @@
 		},
 		"files": [
 			"src/helper.php"
-		],
-		"classmap": [
-			"src/"
 		]
 	},
 	"scripts": {
