--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
 	"bin": ["bin/bmvc"],
 	"require": {
 		"php": "^7.3 || ^8.0",
+		"ext-json": "*",
+		"ext-pdo": "*",
 		"ext-mbstring": "*",
 		"ext-intl" : "*",
 		"mirarus/bmvc-libs": "*",
