--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"ext-pdo": "*",
 		"ext-mbstring": "*",
 		"ext-intl" : "*",
-		"mirarus/bmvc-libs": "^0.*",
+		"mirarus/bmvc-libs": "0.*",
 		"filp/whoops": "^2.12",
 		"jenssegers/blade": "^1.4",
 		"monolog/monolog": "^2.2",
