--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"ext-mbstring": "*",
 		"ext-intl" : "*",
 		"mirarus/bmvc-libs": "0.*",
+		"mirarus/bmvc-exception": "0.*",
 		"vlucas/phpdotenv": "^5.3",
 		"jenssegers/blade": "^1.4",
 		"symfony/console": "^5.3"
