--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,11 @@
 			"src/helper.php"
 		]
 	},
+	"config": {
+		"preferred-install": "dist",
+		"sort-packages": true,
+		"optimize-autoloader": true
+	},
 	"scripts": {
 		"post-install-cmd": "BMVC\\Libs\\Composer::folderDelete",
 		"post-update-cmd": "BMVC\\Libs\\Composer::folderDelete",
