--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
 	"require": {
 		"php": "^7.3 || ^8.0",
 		"ext-json": "*",
-		"ext-pdo": "*",
 		"ext-mbstring": "*",
 		"ext-intl" : "*",
+		"mirarus/db": "0.*",
 		"mirarus/bmvc-libs": "0.*",
 		"mirarus/bmvc-exception": "0.*",
 		"vlucas/phpdotenv": "^5.3",
