--- a/example/.env.example
+++ b/example/.env.example
@@ -1,10 +1,8 @@
-# DIR=/bmvc-core/
 ENVIRONMENT=development
 TIMEZONE=Europe/Istanbul
-LOG=true
-LANG=en
-VIEW_DIR=
-VIEW_CACHE=
+LOCALE=en_US
+LOG=false
+I18N=false
 PUBLIC_DIR=
 
 # DB_DSN=mysql:host=localhost;dbname=bmvc;charset=utf8
